--- a/css/main.css
+++ b/css/main.css
@@ -24,8 +24,6 @@
 }
 
 /**************** Header ****************/
-
-
 .banner {
     position: relative;
     background: rgba(0,0,0,.6) !important;
@@ -45,22 +43,26 @@
     background-image: url("../image/large.jpg");
     z-index: -1;
 }
+
 .list-inline {
     float: right;
     margin: 15px 20px 0 0;
 }
+
 .list-inline li a {
 	display: inline-block;
     padding-left: 20px;
     color: #fff;
     font-size: 15px;
 }
+
 .phrase {
 	margin: 0 auto;
 	position: relative;
 	top: 50%;
 	transform: translateY(-160%);
 }
+
 .header-banner {
 	position: absolute;
 	bottom: 0;
@@ -83,22 +85,70 @@
 	font-size: 20px;
 }
 
-/*------------------------ Separador vertical */
-.vertical-divider
-{
+header nav a {
+	color: #808080;
+	display:inline-block;
+	padding:10px 10px;
+	text-decoration: none;
+	border-radius: 6px;
+	-webkit-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;	
+}
+
+header nav a:hover, nav li a:focus {
+	background-color: darkgrey;
+	color: #FFF;
+	text-decoration: none;
+	outline: none;
+}
+
+#main-navigation {
+	z-index: 1;
+	position: absolute;
+	right: 10px;
+	margin: 17px 20px 0 0;
+}
+#main-navigation ul {
+	background-color: rgba(51, 119, 255, 0.4);
+	list-style: none;
+	padding: 10px;
+	border-radius: 5px;
+}
+#main-navigation ul a{
+	color: #FFF;
+}
+
+.icon-menu{
+	margin: 10px;
+	background-color: #FFF;
+	color: lightgrey;
+	font-size: 25px;
+}
+
+.mobile-menu {
+	margin-top: -20px;
+}
+
+#burger-button {
+	background-color: transparent;
+	padding: 5px;
+	border-color: lightgrey;
+}
+/**************** Vertical Divider****************/
+.vertical-divider {
 	border-top:1px solid #CCC;
 	text-align: center;
-}
-.vertical-divider img
-{
+} 
+
+.vertical-divider img {
 	position: absolute;
 	z-index: 1;
 	transform: translateY(-50%) translateX(-50%);
 }
-/*------------------------ END Separador vertical */
+
 
 /**************** Services ****************/
-
 .services {
 	text-align: center;
 	margin: 100px auto;
@@ -138,6 +188,7 @@
 	display: inline-block;
 	margin: 0 auto;
 }
+
 /**************** Section Example ****************/
 .services, .example{
 	margin: 100px 0;
@@ -160,6 +211,7 @@
 	background: url(../image/sec-2.jpg) left center;
 	background-size: contain;
 }
+
 .steps .col-steps-info{
 	background: #FFF;
 }
@@ -178,6 +230,7 @@
 .step2 ul li {
 	margin-left: 20px;
 }
+
 .step3{
 	margin-bottom: 50px;
 }
@@ -206,9 +259,11 @@ h3, h4, p, li {
 .request p, li {
 	padding: 10px;
 }
+
 .request ul {
 	margin-left: 20px;
 }
+
 .request small {
 	color: #6699ff;
 }
@@ -229,18 +284,18 @@ h3, h4, p, li {
 	border-radius: 3px;
 	font-size: 20px;
 }
+
 /**************** Footer ****************/
-.footer-banner
-{
+.footer-banner {
 	background: rgba(87, 149, 255, 0.79);
 	padding: 30px 0;
 }
-.footer-banner h3
-{
+
+.footer-banner h3 {
 	margin: 0;
 }
-.footer-button
-{
+
+.footer-button {
 	background: none;
 	border:1px solid #FFF;
 	padding: 5px 10px;
@@ -248,6 +303,7 @@ h3, h4, p, li {
 	font-size: 20px;
 
 }
+
 .page-footer {
 	background-color: #00004d;
 	color: #fff;
@@ -261,9 +317,10 @@ h3, h4, p, li {
     font-size: 20px;   
 }
 
-.page-footer small{
+.page-footer small {
 	margin-left: 10px;
 }
+
 .copy {
 	line-height: 20px;
 }
@@ -288,6 +345,7 @@ h3, h4, p, li {
  	height: 500px;
 	}
 }
+
 @media screen and (max-width:999px)
 {
 	.iconcircle
